/* Changes-1.07.txt */

--- New features -----

CondLangLR1

DDL2

--- Updates ---

CCore/inc/Random.h

 RandomBase class and methods select_uint are added

----------------------