@@ -1,0 +1,33 @@
+# Makefile.lib.rules
+#----------------------------------------------------------------------------------------
+#
+#  Project: CCore 1.07
+#
+#  Tag: General
+#
+#  License: Boost Software License - Version 1.0 - August 17th, 2003 
+#
+#            see http://www.boost.org/LICENSE_1_0.txt or the local copy
+#
+#  Copyright (c) 2009 Sergey Strukov. All rights reserved.
+#
+#----------------------------------------------------------------------------------------
+
+# dep file
+
+DEP_FILE = $(OBJ_PATH)/Makefile.dep
+
+# rules
+
+asm: $(ASM_LIST)
+
+clean:
+	$(RM) $(TARGET) $(OBJ_PATH)/*
+
+$(TARGET) : $(OBJ_LIST) $(ASM_OBJ_LIST)
+	$(RM) $(TARGET)
+	$(AR) r $(TARGET) $(OBJ_LIST) $(ASM_OBJ_LIST)
+
+$(DEP_FILE) : $(DEP_LIST)
+	@echo CAT ; cat $(DEP_LIST) > $(DEP_FILE)
+
